Sync the rest of the localization changes. Fixes #464

--- a/src/main/resources/locale/locale_cs_CZ.properties
+++ b/src/main/resources/locale/locale_cs_CZ.properties
@@ -96,6 +96,7 @@ Fishing.Skillup=[[YELLOW]]Dovednost v rybareni byla navysena o {0}. Celkem ({1})
 Herbalism.Ability.DoubleDropChance=[[RED]]\u0160ance na dvojn\u00e1sobn\u00fd zisk: [[YELLOW]]{0}
 Herbalism.Ability.FD=[[RED]]Farm\u00e1\u0159\u016fv apetit: [[YELLOW]]Rank {0}
 Herbalism.Ability.GTe.Length=[[RED]]D\u00e9lka trv\u00e1n\u00ed Zelen\u00e9 planety: [[YELLOW]]{0}s
+Herbalism.Ability.GTe.NeedMore=[[RED]]You need more seeds to spread Green Terra.
 Herbalism.Ability.GTh.Chance=[[RED]]\u0160ance na dovednost Zahradn\u00edk: [[YELLOW]]{0}
 Herbalism.Ability.GTh.Fail=[[RED]]**ZAHRADN\u00cdK SELHAL**
 Herbalism.Ability.GTh.Stage=[[RED]]Green Thumb Stage: [[YELLOW]] Crops grow in stage {0}
@@ -179,6 +180,7 @@ Repair.Effect.8=Tajemne kovani
 Repair.Effect.9=Oprava enchantovanych predmetu
 Repair.Effect.16=Salvage ({0}+ SKILL)
 Repair.Effect.17=Salvage Tools & Armor
+Repair.Error=[[DARK_RED]]mcMMO encountered an error attempting to repair this item!
 Repair.Listener.Anvil=[[DARK_RED]]Polo\u017eil si kovadlinu, na kovadlin\u011b m\u016f\u017ee\u0161 opravovat n\u00e1stroje a zbroj.
 Repair.Listener.Anvil2=[[DARK_RED]]You have placed a Salvage anvil, use this to Salvage tools and armor.
 Repair.Listener=Opravovani:
@@ -242,7 +244,7 @@ Taming.Ability.Bonus.5=V\u00fdbu\u0161niny d\u00e1vaj\u00ed 1/6 norm\u00e1ln\u00
 Taming.Ability.Bonus.6=Nabrousene drapy
 Taming.Ability.Bonus.7=+2 Zraneni
 Taming.Ability.Bonus.8=Rychl\u00e9 Ob\u010derstven\u00ed
-Taming.Ability.Bonus.9={0} Chance for heal on attack
+Taming.Ability.Bonus.9={0}% Chance for heal on attack
 Taming.Ability.Locked.0=LOCKED UNTIL {0}+ SKILL (ENVIRONMENTALLY AWARE)
 Taming.Ability.Locked.1=LOCKED UNTIL {0}+ SKILL (THICK FUR)
 Taming.Ability.Locked.2=LOCKED UNTIL {0}+ SKILL (SHOCK PROOF)
@@ -334,12 +336,19 @@ Combat.StruckByGore=[[RED]]**BYL JSI PROBODNUT**
 Combat.TargetDazed=C\u00edl byl [[DARK_RED]]Omr\u00e1\u010den
 Combat.TouchedFuzzy=[[DARK_RED]]Nejasne dotcen. Mas zavrat.
 mcMMO.Description=[[DARK_AQUA]]O projektu [[YELLOW]]mcMMO[[DARK_AQUA]],[[GOLD]]mcMMO je [[RED]]open source[[GOLD]] RPG mod vytvo\u0159en v \u00fanoru 2011,[[GOLD]] hr\u00e1\u010dem [[BLUE]]nossr50[[GOLD]]. C\u00edlem je poskytnout kvalitn\u00ed RPG zku\u0161enosti.,[[DARK_AQUA]]Tipy:,[[GOLD]] - [[GREEN]]Pou\u017eij [[RED]]/mcc[[GREEN]] k shl\u00e9dnut\u00ed p\u0159\u00edkaz\u016f,[[GOLD]] - [[GREEN]]napi\u0161 [[RED]]/SKILLNAME[[GREEN]] k z\u00edsk\u00e1n\u00ed informac\u00ed o dan\u00e9 dovednosti,[[DARK_AQUA]]V\u00fdvoj\u00e1\u0159i:,[[GOLD]] - [[GREEN]]nossr50 [[BLUE]](V\u016fdce projektu),[[GOLD]] - [[GREEN]]GJ [[BLUE]](Star\u0161\u00ed v\u00fdvoj\u00e1\u0159),[[GOLD]] - [[GREEN]]NuclearW [[BLUE]](V\u00fdvoj\u00e1\u0159),[[GOLD]] - [[GREEN]]bm01 [[BLUE]](V\u00fdvoj\u00e1\u0159),[[DARK_AQUA]]U\u017eite\u010dn\u00e9 odkazy:,[[GOLD]] - [[GREEN]]issues.mcmmo.org[[GOLD]] Hl\u00e1\u0161en\u00ed chyb,[[GOLD]] - [[GREEN]]#mcmmo @ irc.esper.net[[GOLD]] IRC Chat,[[GOLD]] - [[GREEN]]http://bit.ly/H6XwFb[[GOLD]] P\u0159\u00edsp\u011bvek na Bukkit F\u00f3rum
+Commands.addlevels.AwardAll.1=[[GREEN]]You were awarded {0} levels in all skills!
+Commands.addlevels.AwardAll.2=[[RED]]All skills have been modified for {0}.
+Commands.addlevels.AwardSkill.1=[[GREEN]]You were awarded {0} levels in {1}!
+Commands.addlevels.AwardSkill.2=[[RED]]{0} has been modified for {1}.
+Commands.addxp.AwardAll=[[GREEN]]You were awarded {0} experience in all skills!
+Commands.addxp.AwardSkill=[[GREEN]]You were awarded {0} experience in {1}!
 Commands.Ability.Off=Pou\u017eit\u00ed schopnosti bylo [[RED]] vypnuto
 Commands.Ability.On=Pou\u017eit\u00ed schopnosti bylo [[GREEN]]zapnuto
 Commands.AdminChat.Off=Admin chat [[RED]]Vypnuty
 Commands.AdminChat.On=Admin Chat[[GREEN]]Zapnut\u00fd
-Commands.AdminChat.Prefix=[[AQUA]]{[[WHITE]]{0}[[AQUA]]}
+Commands.AdminChat.Prefix=[[AQUA]]\\{[[WHITE]]{0}[[AQUA]]\\}
 Commands.AdminToggle=[[RED]]- Prepnout admin chat
+Commands.Chat.Console=*Console*
 Commands.Disabled=[[RED]]Tento prikaz je vypnuty.
 Commands.DoesNotExist=[[RED]]Hrac se v databaze nenachazi!
 Commands.GodMode.Disabled=[[YELLOW]]mcMMO Godmod vypnuty
@@ -349,11 +358,23 @@ Commands.Inspect=<player> [[RED]]- Shl\u00e9dni detailn\u00ed informace o hr\u00
 Commands.Invite.Accepted=[[GREEN]]Pozvanka prijata. Pridal jsi se k party {0}
 Commands.Invite.Success=[[GREEN]]Pozv\u00e1nka \u00faspesne odesl\u00e1na.
 Commands.Leaderboards=<skill> <page> [[RED]]- Tabulka nejlep\u0161\u00edch
+Commands.mcc.Header=[[RED]]---[][[YELLOW]]mcMMO Commands[[RED]][]---
 Commands.mcgod=[[RED]]- Prepnout GodMod
-Commands.mcrank.Skill=[[YELLOW]]{0}[[GREEN]] - [[GOLD]]Rank [[WHITE]]#[[GREEN]]{1}
+Commands.mchud.Invalid=[[RED]]That is not a valid HUD type.
+Commands.mcpurge.Success=[[GREEN]]The database was successfully purged!
+Commands.mcrank.Heading=[[GOLD]]-=PERSONAL RANKINGS=-
 Commands.mcrank.Overall=[[YELLOW]]Overall[[GREEN]] - [[GOLD]]Rank [[WHITE]]#[[GREEN]]{0}
+Commands.mcrank.Player=[[RED]]TARGET: [[WHITE]]{0}
+Commands.mcrank.Skill=[[YELLOW]]{0}[[GREEN]] - [[GOLD]]Rank [[WHITE]]#[[GREEN]]{1}
 Commands.mcrank.Unranked=[[WHITE]]Unranked
+Commands.mcrefresh.Success=[[RED]]{0}\'s cooldowns have been refreshed.
+Commands.mcremove.Success=[[GREEN]]{0} was successfully removed from the database!
+Commands.mctop.Tip=[[GOLD]]Tip: Use [[RED]]/mcrank[[GOLD]] to view all of your personal rankings!
 Commands.mmoedit=[player] <skill> <newvalue> [[RED]] - Modify target
+Commands.mmoedit.Modified.1=[[GREEN]]Your level in {0} was set to {1}!
+Commands.mmoedit.Modified.2=[[RED]]{0} has been modified for {1}.
+Commands.mmoupdate.Start=[[GRAY]]Starting conversion...
+Commands.mmoupdate.Finish=[[GREEN]]Conversion finished!
 Commands.ModDescription=[[RED]]- Precti si strucny popis pluginu
 Commands.NoConsole=Tento prikaz nepodporuje pouziti z konzole.
 Commands.Other=[[GREEN]]--OSTATNI PRIKAZY--
@@ -386,6 +407,16 @@ Commands.SkillInfo=/<skill> [[RED]]- Zjist\u00ed\u0161 bliz\u0161\u00ed informac
 Commands.Stats.Self=Tvoje statistiky
 Commands.Stats=[[RED]]- Shl\u00e9dnout svoje mcMMO statistiky
 Commands.ToggleAbility=[[RED]]- Aktivace schopnosti prav\u00fdm tla\u010d\u00edtkem.
+Commands.Usage.1=[[RED]]Proper usage is /{0} {1}
+Commands.Usage.2=[[RED]]Proper usage is /{0} {1} {2}
+Commands.Usage.3=[[RED]]Proper usage is /{0} {1} {2} {3}
+Commands.Usage.Level=level
+Commands.Usage.Message=message
+Commands.Usage.Page=page
+Commands.Usage.PartyName=party-name
+Commands.Usage.Player=player
+Commands.Usage.Skill=skill
+Commands.Usage.XP=xp
 mcMMO.NoInvites=[[RED]]Momentalne nemas zadne pozvanky
 mcMMO.NoPermission=[[DARK_RED]]Nedostatecna prava
 mcMMO.NoSkillNote=[[DARK_GRAY]]Pokud nemas pristup k schopnosti, nebude zobrazena.
@@ -406,12 +437,17 @@ Party.IsLocked=[[RED]]Tahla parta je ji\u017e uzamknuta!
 Party.IsntLocked=[[RED]]Tato parta je zamknuta!
 Party.Locked=[[RED]]Parta je zamnuta, pouze velitel party t\u011b m\u016f\u017ee p\u0159izvat.
 Party.NotInYourParty=[[DARK_RED]]{0} nen\u00ed ve tv\u00e9 part\u011b.
-Party.NotOwner=[[DARK_RED]]Nejsi vlastn\u00edkem party
+Party.NotOwner=[[DARK_RED]]You are not the party leader.
+Party.Owner.New=[[GREEN]]{0} is the new party leader.
+Party.Owner.NotLeader=[[DARK_RED]]You are no longer the party leader.
+Party.Owner.Player=[[GREEN]]You are now the party leader.
+Party.Password.Incorrect=[[RED]]Party password is incorrect.
 Party.PasswordSet=[[GREEN]]Heslo do party nastaveno na {0}
 Party.Player.Invalid=[[RED]]Tohle neni platny hrac.
 Party.Teleport.Dead=[[RED]]Nemuzes se teleportovat k mrtvemu hraci.
 Party.Teleport.Hurt=[[RED]]Byl jsi zasa\u017een p\u0159ed {0} sekundami a nem\u016f\u017ee\u0161 se teleportovat.
 Party.Teleport.Player=[[GREEN]]Byl jsi teleportovan k {0}.
+Party.Teleport.Self=[[RED]]You can\'t teleport to yourself!
 Party.Teleport.Target=[[GREEN]]{0} se k tobe teleportoval.
 Party.Unlocked=[[GRAY]]Party je odemknuta
 Commands.XPGain.Acrobatics=Padani
@@ -429,6 +465,7 @@ Commands.XPGain.Woodcutting=Chopping down trees
 Commands.XPGain=[[DARK_GRAY]]Zisk dovednosti: [[WHITE]]{0}
 Commands.xplock.locked=[[GOLD]]Tvuj XP bar byl uzamcen na {0}!
 Commands.xplock.unlocked=[[GOLD]]Tvuj XP bar je nyni [[GREEN]]ODEMCEN[[GOLD]]!
+Commands.xprate.modified=[[RED]]The XP RATE was modified to {0}
 Commands.xprate.over=[[RED]]mcMMO Event na XP N\u00e1sobek ZKON\u010cIL!
 Commands.xprate.proper.0=[[RED]]Spravne pouziti prikazu pro zmenu sazby dovednosti je /xprate <integer> <true/false>
 Commands.xprate.proper.1=[[RED]]Spravne pou\u017eit\u00ed k obnov\u011b urovn\u011b XP na v\u00fdchoz\u00ed hodnotu je /xprate reset
@@ -475,8 +512,8 @@ Stats.Own.Stats=[[GREEN]][mcMMO] Statistiky
 Perks.xp.name=Experience
 Perks.xp.desc=Receive {0}x XP.
 Perks.lucky.name=Luck
-Perks.lucky.desc=Gives {0} skills and abilities a 33.3 better chance to activate.
-Perks.lucky.desc.login=Gives certain skills and abilities a 33.3 better chance to activate.
+Perks.lucky.desc=Gives {0} skills and abilities a 33.3% better chance to activate.
+Perks.lucky.desc.login=Gives certain skills and abilities a 33.3% better chance to activate.
 Perks.lucky.bonus=[[GOLD]] ({0} with Lucky Perk)
 Perks.cooldowns.name=Fast Recovery
 Perks.cooldowns.desc=Cuts cooldown duration by {0}.
@@ -488,6 +525,7 @@ Vampirism.Killer.Failure=[[GOLD]][mcMMO] [[YELLOW]]{0}[[GRAY]] was too unskilled
 Vampirism.Killer.Success=[[GOLD]][mcMMO] [[DARK_AQUA]]You\'ve stolen [[BLUE]]{0}[[DARK_AQUA]] levels from [[YELLOW]]{1}.
 Vampirism.Victim.Failure=[[GOLD]][mcMMO] [[YELLOW]]{0}[[GRAY]] was unable to steal knowledge from you!
 Vampirism.Victim.Success=[[GOLD]][mcMMO] [[YELLOW]]{0}[[DARK_RED]] has stolen [[BLUE]]{1}[[DARK_RED]] levels from you!
+Spout.Donate=[[YELLOW]][mcMMO] Donate!
 Spout.LevelUp.1=[[GREEN]Level Up!
 Spout.LevelUp.2=[[YELLOW]]{0}[[DARK_AQUA]] ([[GREEN]]{1}[[DARK_AQUA]])
 Spout.Menu.Exit=[[GRAY]]Press ESCAPE to exit!
@@ -496,6 +534,7 @@ Spout.Menu.HudButton.1=HUD Type: {0}
 Spout.Menu.HudButton.2=Change your HUD style!
 Spout.Menu.Title=[[GOLD]]~mcMMO Menu~
 Spout.Title={0}\n[[YELLOW]]P[[GOLD]]lvl[[WHITE]].[[GREEN]]{1}
+MOTD.Donate=[[DARK_AQUA]]Donation Info:
 MOTD.Hardcore.VampireOff=[[GOLD]][mcMMO] [[DARK_RED]]Hardcore & Vampirism enabled.
 MOTD.Hardcore.Stats=[[GOLD]][mcMMO] [[DARK_AQUA]]Skill Death Penalty: [[DARK_RED]]{0}%
 MOTD.Hardcore.VampireOn=[[GOLD]][mcMMO] [[DARK_RED]]Hardcore enabled.
