--- a/src/main/resources/locale/locale_es.properties
+++ b/src/main/resources/locale/locale_es.properties
@@ -96,6 +96,7 @@ Fishing.Skillup=[[YELLOW]]Habilidad de Pescador incrementada en {0}. Total ({1})
 Herbalism.Ability.DoubleDropChance=[[RED]]Probabilidad de Doble Drop: [[YELLOW]]{0}
 Herbalism.Ability.FD=[[RED]]Dieta del Granjero: [[YELLOW]]Rango {0}
 Herbalism.Ability.GTe.Length=[[RED]]Duraci\u00f3n de Tierra Verde: [[YELLOW]]{0}seg
+Herbalism.Ability.GTe.NeedMore=[[RED]]You need more seeds to spread Green Terra.
 Herbalism.Ability.GTh.Chance=[[RED]]Probabilidad de Pulgar Verde: [[YELLOW]]{0}
 Herbalism.Ability.GTh.Fail=[[RED]]**PULGAR VERDE FALL\u00d3**
 Herbalism.Ability.GTh.Stage=[[RED]]Green Thumb Stage: [[YELLOW]] Crops grow in stage {0}
@@ -179,6 +180,7 @@ Repair.Effect.8=Forjado Arcano
 Repair.Effect.9=Reparar objetos m\u00e1gicos
 Repair.Effect.16=Salvage ({0}+ SKILL)
 Repair.Effect.17=Salvage Tools & Armor
+Repair.Error=[[DARK_RED]]mcMMO encountered an error attempting to repair this item!
 Repair.Listener.Anvil=[[DARK_RED]]Has colocado un yunque y estos pueden usarse para reparar herramientas y armaduras.
 Repair.Listener.Anvil2=[[DARK_RED]]You have placed a Salvage anvil, use this to Salvage tools and armor.
 Repair.Listener=Reparaci\u00f3n:
@@ -242,7 +244,7 @@ Taming.Ability.Bonus.5=Explosivos hacen 1/6 del da\u00f1o normal
 Taming.Ability.Bonus.6=Garras Afiladas
 Taming.Ability.Bonus.7=+2 de Da\u00f1o
 Taming.Ability.Bonus.8=Servicio de Comida R\u00e1pida
-Taming.Ability.Bonus.9={0} Chance for heal on attack
+Taming.Ability.Bonus.9={0}% Chance for heal on attack
 Taming.Ability.Locked.0=LOCKED UNTIL {0}+ SKILL (ENVIRONMENTALLY AWARE)
 Taming.Ability.Locked.1=LOCKED UNTIL {0}+ SKILL (THICK FUR)
 Taming.Ability.Locked.2=LOCKED UNTIL {0}+ SKILL (SHOCK PROOF)
@@ -334,12 +336,19 @@ Combat.StruckByGore=[[RED]]**FUISTE MORDISQUEADO**
 Combat.TargetDazed=El objetivo fue [[DARK_RED]]aturdido
 Combat.TouchedFuzzy=[[DARK_RED]]Est\u00e1s confuso. Te sientes mareado.
 mcMMO.Description=[[DARK_AQUA]]Acerca del Proyecto [[YELLOW]]mcMMO[[DARK_AQUA]]:,[[GOLD]]mcMMO es un mod RPG de [[RED]]c\u00f3digo abierto[[GOLD]] creado en febrero de 2011,[[GOLD]]por [[BLUE]]nossr50[[GOLD]]. El objetivo es de proporcionar una experiencia RPG de calidad.,[[DARK_AQUA]]Tips:,[[GOLD]] - [[GREEN]]Use [[RED]]/mcc[[GREEN]] para ver los comandos,[[GOLD]] - [[GREEN]]Escriba [[RED]]/HABILIDAD[[GREEN]] para ver info detallada de la habilidad,[[DARK_AQUA]]Desarrolladores:,[[GOLD]] - [[GREEN]]nossr50 [[BLUE]](Lider del Proyecto),[[GOLD]] - [[GREEN]]GJ [[BLUE]](Desarrolladores Senior),[[GOLD]] - [[GREEN]]NuclearW [[BLUE]](Desarrollador),[[GOLD]] - [[GREEN]]bm01 [[BLUE]](Desarrollador),[[GOLD]] - [[GREEN]]Sharkiller [[BLUE]](Traductor),[[GOLD]] - [[GREEN]]barreytor [[BLUE]](Traductor),[[DARK_AQUA]]Links \u00fatiles:,[[GOLD]] - [[GREEN]]issues.mcmmo.org[[GOLD]] Reportar bugs,[[GOLD]] - [[GREEN]]#mcmmo @ irc.esper.net[[GOLD]] Chat IRC,[[GOLD]] - [[GREEN]]http://bit.ly/H6XwFb[[GOLD]] Tema en el foro de Bukkit
+Commands.addlevels.AwardAll.1=[[GREEN]]You were awarded {0} levels in all skills!
+Commands.addlevels.AwardAll.2=[[RED]]All skills have been modified for {0}.
+Commands.addlevels.AwardSkill.1=[[GREEN]]You were awarded {0} levels in {1}!
+Commands.addlevels.AwardSkill.2=[[RED]]{0} has been modified for {1}.
+Commands.addxp.AwardAll=[[GREEN]]You were awarded {0} experience in all skills!
+Commands.addxp.AwardSkill=[[GREEN]]You were awarded {0} experience in {1}!
 Commands.Ability.Off=Habilidades [[RED]]desactivadas
 Commands.Ability.On=Habilidades [[GREEN]]activadas
 Commands.AdminChat.Off=Chat s\u00f3lo para Admins [[RED]]desactivado
 Commands.AdminChat.On=Chat s\u00f3lo para Admins [[GREEN]]activado
-Commands.AdminChat.Prefix=[[AQUA]]{[[WHITE]]{0}[[AQUA]]}
+Commands.AdminChat.Prefix=[[AQUA]]\\{[[WHITE]]{0}[[AQUA]]\\}
 Commands.AdminToggle=[[RED]]- Alternar chat de admin
+Commands.Chat.Console=*Console*
 Commands.Disabled=[[RED]]Este comando est\u00e1 deshabilitado.
 Commands.DoesNotExist=[[RED]]\u00a1El jugador no existe en la base de datos!
 Commands.GodMode.Disabled=[[YELLOW]]mcMMO Modo Dios Desactivado
@@ -349,11 +358,23 @@ Commands.Inspect=<jugador> [[RED]]-Ver informaci\u00f3n detallada del jugador
 Commands.Invite.Accepted=[[GREEN]]Invitaci\u00f3n Aceptada. Te uniste al grupo {0}
 Commands.Invite.Success=[[GREEN]]Invitaci\u00f3n enviada satisfactoriamente
 Commands.Leaderboards=<habilidad> <p\u00e1gina> [[RED]]- Tabla de posiciones
+Commands.mcc.Header=[[RED]]---[][[YELLOW]]mcMMO Commands[[RED]][]---
 Commands.mcgod=[[RED]]- Alternar Modo Dios
-Commands.mcrank.Skill=[[YELLOW]]{0}[[GREEN]] - [[GOLD]]Rank [[WHITE]]#[[GREEN]]{1}
+Commands.mchud.Invalid=[[RED]]That is not a valid HUD type.
+Commands.mcpurge.Success=[[GREEN]]The database was successfully purged!
+Commands.mcrank.Heading=[[GOLD]]-=PERSONAL RANKINGS=-
 Commands.mcrank.Overall=[[YELLOW]]Overall[[GREEN]] - [[GOLD]]Rank [[WHITE]]#[[GREEN]]{0}
+Commands.mcrank.Player=[[RED]]TARGET: [[WHITE]]{0}
+Commands.mcrank.Skill=[[YELLOW]]{0}[[GREEN]] - [[GOLD]]Rank [[WHITE]]#[[GREEN]]{1}
 Commands.mcrank.Unranked=[[WHITE]]Unranked
+Commands.mcrefresh.Success=[[RED]]{0}\'s cooldowns have been refreshed.
+Commands.mcremove.Success=[[GREEN]]{0} was successfully removed from the database!
+Commands.mctop.Tip=[[GOLD]]Tip: Use [[RED]]/mcrank[[GOLD]] to view all of your personal rankings!
 Commands.mmoedit=[jugador] <habilidad> <nuevo valor> [[RED]] - Modificar habilidad
+Commands.mmoedit.Modified.1=[[GREEN]]Your level in {0} was set to {1}!
+Commands.mmoedit.Modified.2=[[RED]]{0} has been modified for {1}.
+Commands.mmoupdate.Start=[[GRAY]]Starting conversion...
+Commands.mmoupdate.Finish=[[GREEN]]Conversion finished!
 Commands.ModDescription=[[RED]]- Lea la descripci\u00f3n breve del mod
 Commands.NoConsole=Este comando no es soportado desde la consola.
 Commands.Other=[[GREEN]]--OTROS COMANDOS--
@@ -386,6 +407,16 @@ Commands.SkillInfo=/<habilidad> [[RED]]- Ver informaci\u00f3n detallada acerca d
 Commands.Stats.Self=TUS ESTAD\u00cdSTICAS
 Commands.Stats=[[RED]]- Ver tus estad\u00edsticas de mcMMO
 Commands.ToggleAbility=[[RED]]- Alternar activaci\u00f3n de habilidades con click derecho
+Commands.Usage.1=[[RED]]Proper usage is /{0} {1}
+Commands.Usage.2=[[RED]]Proper usage is /{0} {1} {2}
+Commands.Usage.3=[[RED]]Proper usage is /{0} {1} {2} {3}
+Commands.Usage.Level=level
+Commands.Usage.Message=message
+Commands.Usage.Page=page
+Commands.Usage.PartyName=party-name
+Commands.Usage.Player=player
+Commands.Usage.Skill=skill
+Commands.Usage.XP=xp
 mcMMO.NoInvites=[[RED]]No tienes invitaciones en este momento
 mcMMO.NoPermission=[[DARK_RED]]Permisos insuficientes.
 mcMMO.NoSkillNote=[[DARK_GRAY]]Si no tienes acceso a una habilidad no ser\u00e1 mostrada aqu\u00ed.
@@ -406,12 +437,17 @@ Party.IsLocked=[[RED]]\u00a1Este grupo ya est\u00e1 bloqueado!
 Party.IsntLocked=[[RED]]\u00a1Este grupo no est\u00e1 bloqueado!
 Party.Locked=[[RED]]El grupo est\u00e1 bloqueado, solo el l\u00edder puede invitarte
 Party.NotInYourParty=[[DARK_RED]]{0} no esta en tu fiesta
-Party.NotOwner=[[DARK_RED]]No eres el due\u00f1o del grupo
+Party.NotOwner=[[DARK_RED]]You are not the party leader.
+Party.Owner.New=[[GREEN]]{0} is the new party leader.
+Party.Owner.NotLeader=[[DARK_RED]]You are no longer the party leader.
+Party.Owner.Player=[[GREEN]]You are now the party leader.
+Party.Password.Incorrect=[[RED]]Party password is incorrect.
 Party.PasswordSet=[[GREEN]]Contrase\u00f1a del grupo establecida: [[RED]]{0}
 Party.Player.Invalid=[[RED]]Ese no es un jugador v\u00e1lido.
 Party.Teleport.Dead=[[RED]]No te puedes teletransportar a un jugador muerto.
 Party.Teleport.Hurt=[[RED]]Fuiste herido en los \u00faltimos {0} segundos y no te puedes teletransportar.
 Party.Teleport.Player=[[GREEN]]Te teletransportaste a {0}.
+Party.Teleport.Self=[[RED]]You can\'t teleport to yourself!
 Party.Teleport.Target=[[GREEN]]{0} se teletransport\u00f3 a ti.
 Party.Unlocked=[[GRAY]]El grupo est\u00e1 desbloqueado
 Commands.XPGain.Acrobatics=Cayendo
@@ -429,6 +465,7 @@ Commands.XPGain.Woodcutting=Chopping down trees
 Commands.XPGain=[[DARK_GRAY]]OBTENCI\u00d3N DE EXPERIENCIA: [[WHITE]]{0}
 Commands.xplock.locked=[[GOLD]]Tu BARRA DE EXP esta bloqueada a {0}!
 Commands.xplock.unlocked=[[GOLD]]Tu BARRA DE EXP esta ahora [[GREEN]]DESBLOQUEADA[[GOLD]]!
+Commands.xprate.modified=[[RED]]The XP RATE was modified to {0}
 Commands.xprate.over=[[RED]]mcMMO EXP Rate Event TERMINO!!
 Commands.xprate.proper.0=[[DARK_AQUA]]El uso correcto es /xprate <n\u00famero entero> <true:false>
 Commands.xprate.proper.1=[[RED]]Uso correcto para restaurar el ratio de EXP por defecto es /xprate reset
@@ -475,8 +512,8 @@ Stats.Own.Stats=[[GREEN]][mcMMO] Estad\u00edsticas
 Perks.xp.name=Experience
 Perks.xp.desc=Receive {0}x XP.
 Perks.lucky.name=Luck
-Perks.lucky.desc=Gives {0} skills and abilities a 33.3 better chance to activate.
-Perks.lucky.desc.login=Gives certain skills and abilities a 33.3 better chance to activate.
+Perks.lucky.desc=Gives {0} skills and abilities a 33.3% better chance to activate.
+Perks.lucky.desc.login=Gives certain skills and abilities a 33.3% better chance to activate.
 Perks.lucky.bonus=[[GOLD]] ({0} with Lucky Perk)
 Perks.cooldowns.name=Fast Recovery
 Perks.cooldowns.desc=Cuts cooldown duration by {0}.
@@ -488,6 +525,7 @@ Vampirism.Killer.Failure=[[GOLD]][mcMMO] [[YELLOW]]{0}[[GRAY]] was too unskilled
 Vampirism.Killer.Success=[[GOLD]][mcMMO] [[DARK_AQUA]]You\'ve stolen [[BLUE]]{0}[[DARK_AQUA]] levels from [[YELLOW]]{1}.
 Vampirism.Victim.Failure=[[GOLD]][mcMMO] [[YELLOW]]{0}[[GRAY]] was unable to steal knowledge from you!
 Vampirism.Victim.Success=[[GOLD]][mcMMO] [[YELLOW]]{0}[[DARK_RED]] has stolen [[BLUE]]{1}[[DARK_RED]] levels from you!
+Spout.Donate=[[YELLOW]][mcMMO] Donate!
 Spout.LevelUp.1=[[GREEN]Level Up!
 Spout.LevelUp.2=[[YELLOW]]{0}[[DARK_AQUA]] ([[GREEN]]{1}[[DARK_AQUA]])
 Spout.Menu.Exit=[[GRAY]]Press ESCAPE to exit!
@@ -496,6 +534,7 @@ Spout.Menu.HudButton.1=HUD Type: {0}
 Spout.Menu.HudButton.2=Change your HUD style!
 Spout.Menu.Title=[[GOLD]]~mcMMO Menu~
 Spout.Title={0}\n[[YELLOW]]P[[GOLD]]lvl[[WHITE]].[[GREEN]]{1}
+MOTD.Donate=[[DARK_AQUA]]Donation Info:
 MOTD.Hardcore.VampireOff=[[GOLD]][mcMMO] [[DARK_RED]]Hardcore & Vampirism enabled.
 MOTD.Hardcore.Stats=[[GOLD]][mcMMO] [[DARK_AQUA]]Skill Death Penalty: [[DARK_RED]]{0}%
 MOTD.Hardcore.VampireOn=[[GOLD]][mcMMO] [[DARK_RED]]Hardcore enabled.
