--- a/src/main/resources/locale/locale_fi.properties
+++ b/src/main/resources/locale/locale_fi.properties
@@ -96,6 +96,7 @@ Fishing.Skillup=[[YELLOW]]Fishing skill increased by {0}. Total ({1})
 Herbalism.Ability.DoubleDropChance=[[RED]]Double Drop Chance: [[YELLOW]]{0}
 Herbalism.Ability.FD=[[RED]]Farmers Diet: [[YELLOW]]Rank {0}
 Herbalism.Ability.GTe.Length=[[RED]]Green Terra Length: [[YELLOW]]{0}s
+Herbalism.Ability.GTe.NeedMore=[[RED]]You need more seeds to spread Green Terra.
 Herbalism.Ability.GTh.Chance=[[RED]]Green Thumb Chance: [[YELLOW]]{0}
 Herbalism.Ability.GTh.Fail=[[RED]]**GREEN THUMB FAIL**
 Herbalism.Ability.GTh.Stage=[[RED]]Green Thumb Stage: [[YELLOW]] Crops grow in stage {0}
@@ -147,14 +148,14 @@ Mining.Skills.SuperBreaker.Other.On=[[GREEN]]{0}[[DARK_GREEN]] has used [[RED]]S
 Mining.Skills.SuperBreaker.Refresh=[[GREEN]]Your [[YELLOW]]Super Breaker [[GREEN]]ability is refreshed!
 Mining.Skillup=[[YELLOW]]Louhimistaito kasvoi {0} tasolla. Kokonaism\u00e4\u00e4r\u00e4 ({1})
 Mining.Blast.Boom=[[GRAY]]**BOOM**
-Mining.Blast.Effect.0=+35 ore yield
-Mining.Blast.Effect.1=+40 ore yield
-Mining.Blast.Effect.2=+45 ore yield, no debris
-Mining.Blast.Effect.3=+50 ore yield, no debris
-Mining.Blast.Effect.4=+55 ore yield, no debris, double drops
-Mining.Blast.Effect.5=+60 ore yield, no debris, double drops
-Mining.Blast.Effect.6=+65 ore yield, no debris, triple drops
-Mining.Blast.Effect.7=+70 ore yield, no debris, triple drops
+Mining.Blast.Effect.0=+35% ore yield
+Mining.Blast.Effect.1=+40% ore yield
+Mining.Blast.Effect.2=+45% ore yield, no debris
+Mining.Blast.Effect.3=+50% ore yield, no debris
+Mining.Blast.Effect.4=+55% ore yield, no debris, double drops
+Mining.Blast.Effect.5=+60% ore yield, no debris, double drops
+Mining.Blast.Effect.6=+65% ore yield, no debris, triple drops
+Mining.Blast.Effect.7=+70% ore yield, no debris, triple drops
 Mining.Blast.Radius.Increase=[[RED]]Blast Radius Increase: [[YELLOW]]+{0}
 Mining.Blast.Rank=[[RED]]Blast Mining: [[YELLOW]] Rank {0}/8 [[GRAY]]({1})
 Mining.Blast.Other.On=[[GREEN]]{0}[[DARK_GREEN]] has used [[RED]]Blast Mining!
@@ -179,6 +180,7 @@ Repair.Effect.8=Arcane Forging
 Repair.Effect.9=Repair magic items
 Repair.Effect.16=Salvage ({0}+ SKILL)
 Repair.Effect.17=Salvage Tools & Armor
+Repair.Error=[[DARK_RED]]mcMMO encountered an error attempting to repair this item!
 Repair.Listener.Anvil=[[DARK_RED]]Olet asettanut alasimen paikalleen, voit korjata ty\u00f6kalusi ja haarniskasi sill\u00e4.
 Repair.Listener.Anvil2=[[DARK_RED]]You have placed a Salvage anvil, use this to Salvage tools and armor.
 Repair.Listener=Repair:
@@ -217,9 +219,9 @@ Swords.Combat.Counter.Hit=[[DARK_RED]]Hit with a counter-attack!
 Swords.Combat.Countered=[[GREEN]]**COUNTER-ATTACKED**
 Swords.Combat.SS.Struck=[[DARK_RED]]Struck by SERRATED STRIKES!
 Swords.Effect.0=Counter Attack
-Swords.Effect.1=Reflect 50 of damage taken
+Swords.Effect.1=Reflect 50% of damage taken
 Swords.Effect.2=Serrated Strikes (ABILITY)
-Swords.Effect.3=25 DMG AoE, Bleed+ AoE
+Swords.Effect.3=25% DMG AoE, Bleed+ AoE
 Swords.Effect.4=Serrated Strikes Bleed+
 Swords.Effect.5=5 Tick Bleed
 Swords.Effect.6=Bleed
@@ -242,7 +244,7 @@ Taming.Ability.Bonus.5=Explosives do 1/6 normal damage
 Taming.Ability.Bonus.6=Sharpened Claws
 Taming.Ability.Bonus.7=+2 Damage
 Taming.Ability.Bonus.8=Fast Food Service
-Taming.Ability.Bonus.9={0} Chance for heal on attack
+Taming.Ability.Bonus.9={0}% Chance for heal on attack
 Taming.Ability.Locked.0=LOCKED UNTIL {0}+ SKILL (ENVIRONMENTALLY AWARE)
 Taming.Ability.Locked.1=LOCKED UNTIL {0}+ SKILL (THICK FUR)
 Taming.Ability.Locked.2=LOCKED UNTIL {0}+ SKILL (SHOCK PROOF)
@@ -284,7 +286,7 @@ Unarmed.Ability.IronGrip.Defender=[[GREEN]]Your iron grip kept you from being di
 Unarmed.Ability.Lower=[[GRAY]]**YOU LOWER YOUR FISTS**
 Unarmed.Ability.Ready=[[GREEN]]**YOU READY YOUR FISTS**
 Unarmed.Effect.0=Berserk (ABILITY)
-Unarmed.Effect.1=+50 DMG, Breaks weak materials
+Unarmed.Effect.1=+50% DMG, Breaks weak materials
 Unarmed.Effect.2=Disarm (Players)
 Unarmed.Effect.3=Drops the foes item held in hand
 Unarmed.Effect.4=Iron Arm Style
@@ -334,12 +336,19 @@ Combat.StruckByGore=[[RED]]**SINUA ON PISTETTY**
 Combat.TargetDazed=Kohde [[DARK_RED]]tyrm\u00e4tty
 Combat.TouchedFuzzy=[[DARK_RED]]T\u00f6kk\u00e4sit P\u00f6rr\u00f6\u00e4. Tunsit huimauksen.
 mcMMO.Description=[[DARK_AQUA]]About the [[YELLOW]]mcMMO[[DARK_AQUA]] Project:,[[GOLD]]mcMMO is an [[RED]]open source[[GOLD]] RPG mod created in February 2011,[[GOLD]]by [[BLUE]]nossr50[[GOLD]]. The goal is to provide a quality RPG experience.,[[DARK_AQUA]]Tips:,[[GOLD]] - [[GREEN]]Use [[RED]]/mcc[[GREEN]] to see commands,[[GOLD]] - [[GREEN]]Type [[RED]]/SKILLNAME[[GREEN]] to see detailed skill info,[[DARK_AQUA]]Developers:,[[GOLD]] - [[GREEN]]nossr50 [[BLUE]](Project Lead),[[GOLD]] - [[GREEN]]GJ [[BLUE]](Senior Developer),[[GOLD]] - [[GREEN]]NuclearW [[BLUE]](Developer),[[GOLD]] - [[GREEN]]bm01 [[BLUE]](Developer),[[DARK_AQUA]]Useful Links:,[[GOLD]] - [[GREEN]]issues.mcmmo.org[[GOLD]] Bug Reporting,[[GOLD]] - [[GREEN]]#mcmmo @ irc.esper.net[[GOLD]] IRC Chat,[[GOLD]] - [[GREEN]]http://bit.ly/H6XwFb[[GOLD]] Bukkit Forum Thread
+Commands.addlevels.AwardAll.1=[[GREEN]]You were awarded {0} levels in all skills!
+Commands.addlevels.AwardAll.2=[[RED]]All skills have been modified for {0}.
+Commands.addlevels.AwardSkill.1=[[GREEN]]You were awarded {0} levels in {1}!
+Commands.addlevels.AwardSkill.2=[[RED]]{0} has been modified for {1}.
+Commands.addxp.AwardAll=[[GREEN]]You were awarded {0} experience in all skills!
+Commands.addxp.AwardSkill=[[GREEN]]You were awarded {0} experience in {1}!
 Commands.Ability.Off=Ability use toggled [[RED]]off
 Commands.Ability.On=Ability use toggled [[GREEN]]on
 Commands.AdminChat.Off=Admin Chat only [[RED]]Off
 Commands.AdminChat.On=Admin Chat only [[GREEN]]On
-Commands.AdminChat.Prefix=[[AQUA]]{[[WHITE]]{0}[[AQUA]]}
+Commands.AdminChat.Prefix=[[AQUA]]\\{[[WHITE]]{0}[[AQUA]]\\}
 Commands.AdminToggle=[[RED]]- Toggle admin chat
+Commands.Chat.Console=*Console*
 Commands.Disabled=[[RED]]This command is disabled.
 Commands.DoesNotExist=[[RED]]Player does not exist in the database!
 Commands.GodMode.Disabled=[[YELLOW]]mcMMO Godmode Disabled
@@ -349,11 +358,23 @@ Commands.Inspect=<player> [[RED]]- View detailed player info
 Commands.Invite.Accepted=[[GREEN]]Invite Accepted. You have joined party {0}
 Commands.Invite.Success=[[GREEN]]Invite sent successfully.
 Commands.Leaderboards=<skill> <page> [[RED]]- Leaderboards
+Commands.mcc.Header=[[RED]]---[][[YELLOW]]mcMMO Commands[[RED]][]---
 Commands.mcgod=[[RED]]- Toggle GodMode
-Commands.mcrank.Skill=[[YELLOW]]{0}[[GREEN]] - [[GOLD]]Rank [[WHITE]]#[[GREEN]]{1}
+Commands.mchud.Invalid=[[RED]]That is not a valid HUD type.
+Commands.mcpurge.Success=[[GREEN]]The database was successfully purged!
+Commands.mcrank.Heading=[[GOLD]]-=PERSONAL RANKINGS=-
 Commands.mcrank.Overall=[[YELLOW]]Overall[[GREEN]] - [[GOLD]]Rank [[WHITE]]#[[GREEN]]{0}
+Commands.mcrank.Player=[[RED]]TARGET: [[WHITE]]{0}
+Commands.mcrank.Skill=[[YELLOW]]{0}[[GREEN]] - [[GOLD]]Rank [[WHITE]]#[[GREEN]]{1}
 Commands.mcrank.Unranked=[[WHITE]]Unranked
+Commands.mcrefresh.Success=[[RED]]{0}\'s cooldowns have been refreshed.
+Commands.mcremove.Success=[[GREEN]]{0} was successfully removed from the database!
+Commands.mctop.Tip=[[GOLD]]Tip: Use [[RED]]/mcrank[[GOLD]] to view all of your personal rankings!
 Commands.mmoedit=[player] <skill> <newvalue> [[RED]] - Modify target
+Commands.mmoedit.Modified.1=[[GREEN]]Your level in {0} was set to {1}!
+Commands.mmoedit.Modified.2=[[RED]]{0} has been modified for {1}.
+Commands.mmoupdate.Start=[[GRAY]]Starting conversion...
+Commands.mmoupdate.Finish=[[GREEN]]Conversion finished!
 Commands.ModDescription=[[RED]]- Read brief mod description
 Commands.NoConsole=This command does not support console usage.
 Commands.Other=[[GREEN]]--OTHER COMMANDS--
@@ -386,6 +407,16 @@ Commands.SkillInfo=/<skill> [[RED]]- View detailed information about a skill
 Commands.Stats.Self=YOUR STATS
 Commands.Stats=[[RED]]- View your mcMMO stats
 Commands.ToggleAbility=[[RED]]- Toggle ability activation with right click
+Commands.Usage.1=[[RED]]Proper usage is /{0} {1}
+Commands.Usage.2=[[RED]]Proper usage is /{0} {1} {2}
+Commands.Usage.3=[[RED]]Proper usage is /{0} {1} {2} {3}
+Commands.Usage.Level=level
+Commands.Usage.Message=message
+Commands.Usage.Page=page
+Commands.Usage.PartyName=party-name
+Commands.Usage.Player=player
+Commands.Usage.Skill=skill
+Commands.Usage.XP=xp
 mcMMO.NoInvites=[[RED]]You have no invites at this time
 mcMMO.NoPermission=[[DARK_RED]]Insufficient permissions.
 mcMMO.NoSkillNote=[[DARK_GRAY]]If you don\'t have access to a skill it will not be shown here.
@@ -406,12 +437,17 @@ Party.IsLocked=[[RED]]This party is already locked!
 Party.IsntLocked=[[RED]]This party is not locked!
 Party.Locked=[[RED]]Party is locked, only party leader may invite.
 Party.NotInYourParty=[[DARK_RED]]{0} is not in your party
-Party.NotOwner=[[DARK_RED]]You are not the party owner
+Party.NotOwner=[[DARK_RED]]You are not the party leader.
+Party.Owner.New=[[GREEN]]{0} is the new party leader.
+Party.Owner.NotLeader=[[DARK_RED]]You are no longer the party leader.
+Party.Owner.Player=[[GREEN]]You are now the party leader.
+Party.Password.Incorrect=[[RED]]Party password is incorrect.
 Party.PasswordSet=[[GREEN]]Party password set to {0}
 Party.Player.Invalid=[[RED]]That is not a valid player.
 Party.Teleport.Dead=[[RED]]You can\'t teleport to a dead player.
 Party.Teleport.Hurt=[[RED]]You\'ve been hurt in the last {0} seconds and cannnot teleport.
 Party.Teleport.Player=[[GREEN]]You have teleported to {0}.
+Party.Teleport.Self=[[RED]]You can\'t teleport to yourself!
 Party.Teleport.Target=[[GREEN]]{0} has teleported to you.
 Party.Unlocked=[[GRAY]]Party is unlocked
 Commands.XPGain.Acrobatics=Falling
@@ -429,6 +465,7 @@ Commands.XPGain.Woodcutting=Chopping down trees
 Commands.XPGain=[[DARK_GRAY]]XP GAIN: [[WHITE]]{0}
 Commands.xplock.locked=[[GOLD]]Your XP BAR is now locked to {0}!
 Commands.xplock.unlocked=[[GOLD]]Your XP BAR is now [[GREEN]]UNLOCKED[[GOLD]]!
+Commands.xprate.modified=[[RED]]The XP RATE was modified to {0}
 Commands.xprate.over=[[RED]]mcMMO XP Rate Event is OVER!!
 Commands.xprate.proper.0=[[RED]]Proper usage to change the XP rate is /xprate <integer> <true/false>
 Commands.xprate.proper.1=[[RED]]Proper usage to restore the XP rate to default is /xprate reset
@@ -475,8 +512,8 @@ Stats.Own.Stats=[[GREEN]][mcMMO] Stats
 Perks.xp.name=Experience
 Perks.xp.desc=Receive {0}x XP.
 Perks.lucky.name=Luck
-Perks.lucky.desc=Gives {0} skills and abilities a 33.3 better chance to activate.
-Perks.lucky.desc.login=Gives certain skills and abilities a 33.3 better chance to activate.
+Perks.lucky.desc=Gives {0} skills and abilities a 33.3% better chance to activate.
+Perks.lucky.desc.login=Gives certain skills and abilities a 33.3% better chance to activate.
 Perks.lucky.bonus=[[GOLD]] ({0} with Lucky Perk)
 Perks.cooldowns.name=Fast Recovery
 Perks.cooldowns.desc=Cuts cooldown duration by {0}.
@@ -488,6 +525,7 @@ Vampirism.Killer.Failure=[[GOLD]][mcMMO] [[YELLOW]]{0}[[GRAY]] was too unskilled
 Vampirism.Killer.Success=[[GOLD]][mcMMO] [[DARK_AQUA]]You\'ve stolen [[BLUE]]{0}[[DARK_AQUA]] levels from [[YELLOW]]{1}.
 Vampirism.Victim.Failure=[[GOLD]][mcMMO] [[YELLOW]]{0}[[GRAY]] was unable to steal knowledge from you!
 Vampirism.Victim.Success=[[GOLD]][mcMMO] [[YELLOW]]{0}[[DARK_RED]] has stolen [[BLUE]]{1}[[DARK_RED]] levels from you!
+Spout.Donate=[[YELLOW]][mcMMO] Donate!
 Spout.LevelUp.1=[[GREEN]Level Up!
 Spout.LevelUp.2=[[YELLOW]]{0}[[DARK_AQUA]] ([[GREEN]]{1}[[DARK_AQUA]])
 Spout.Menu.Exit=[[GRAY]]Press ESCAPE to exit!
@@ -496,6 +534,7 @@ Spout.Menu.HudButton.1=HUD Type: {0}
 Spout.Menu.HudButton.2=Change your HUD style!
 Spout.Menu.Title=[[GOLD]]~mcMMO Menu~
 Spout.Title={0}\n[[YELLOW]]P[[GOLD]]lvl[[WHITE]].[[GREEN]]{1}
+MOTD.Donate=[[DARK_AQUA]]Donation Info:
 MOTD.Hardcore.VampireOff=[[GOLD]][mcMMO] [[DARK_RED]]Hardcore & Vampirism enabled.
 MOTD.Hardcore.Stats=[[GOLD]][mcMMO] [[DARK_AQUA]]Skill Death Penalty: [[DARK_RED]]{0}%
 MOTD.Hardcore.VampireOn=[[GOLD]][mcMMO] [[DARK_RED]]Hardcore enabled.
