--- a/src/main/resources/locale/locale_fr.properties
+++ b/src/main/resources/locale/locale_fr.properties
@@ -96,6 +96,7 @@ Fishing.Skillup=[[YELLOW]]Le talent p\u00eache augmente de {0}. Total ({1})
 Herbalism.Ability.DoubleDropChance=[[RED]]Double Drop Chance: [[YELLOW]]{0}
 Herbalism.Ability.FD=[[RED]]R\u00e9gime de fermier : [[YELLOW]]Rang {0}
 Herbalism.Ability.GTe.Length=[[RED]]Dur\u00e9e de Main verte : [[YELLOW]]{0}s
+Herbalism.Ability.GTe.NeedMore=[[RED]]You need more seeds to spread Green Terra.
 Herbalism.Ability.GTh.Chance=[[RED]]Green Thumb Chance: [[YELLOW]]{0}
 Herbalism.Ability.GTh.Fail=[[RED]]**DOIGTS VERTS \u00c9CHOU\u00c9**
 Herbalism.Ability.GTh.Stage=[[RED]]Green Thumb Stage: [[YELLOW]] Crops grow in stage {0}
@@ -179,6 +180,7 @@ Repair.Effect.8=Forge arcanique
 Repair.Effect.9=R\u00e9pare les objets magiques
 Repair.Effect.16=Salvage ({0}+ SKILL)
 Repair.Effect.17=Salvage Tools & Armor
+Repair.Error=[[DARK_RED]]mcMMO encountered an error attempting to repair this item!
 Repair.Listener.Anvil=[[DARK_RED]]Vous venez de poser une enclume, elle peut \u00eatre utilis\u00e9e pour r\u00e9parer votre \u00e9quipement.
 Repair.Listener.Anvil2=[[DARK_RED]]You have placed a Salvage anvil, use this to Salvage tools and armor.
 Repair.Listener=R\u00e9paration :
@@ -242,7 +244,7 @@ Taming.Ability.Bonus.5=Les explosifs font 1/6\u00e8me de leurs d\u00e9g\u00e2ts
 Taming.Ability.Bonus.6=Griffes ac\u00e9r\u00e9es
 Taming.Ability.Bonus.7=+2 de d\u00e9g\u00e2ts
 Taming.Ability.Bonus.8=Fast food
-Taming.Ability.Bonus.9={0} Chance for heal on attack
+Taming.Ability.Bonus.9={0}% Chance for heal on attack
 Taming.Ability.Locked.0=LOCKED UNTIL {0}+ SKILL (ENVIRONMENTALLY AWARE)
 Taming.Ability.Locked.1=LOCKED UNTIL {0}+ SKILL (THICK FUR)
 Taming.Ability.Locked.2=LOCKED UNTIL {0}+ SKILL (SHOCK PROOF)
@@ -334,12 +336,19 @@ Combat.StruckByGore=[[RED]]**FRAPP\u00c9 JUSQU\'AU SANG**
 Combat.TargetDazed=La cible a \u00e9t\u00e9 [[DARK_RED]]\u00c9tourdi
 Combat.TouchedFuzzy=[[DARK_RED]]Vous \u00eates \u00e9tourdi.
 mcMMO.Description=[[DARK_AQUA]]A propos de [[YELLOW]]mcMMO :,[[GOLD]]mcMMO est un mod orient\u00e9 RPG et [[RED]]open source[[GOLD]] cr\u00e9e par [[BLUE]]nossr50[[GOLD]] en f\u00e9vrier 2011. Son but est d\'offrir aux joueurs une exp\u00e9rience RPG de qualit\u00e9.,[[DARK_AQUA]]Infos :,[[GOLD]] - [[GREEN]]Faites [[RED]]/mcc[[GREEN]] pour afficher la liste des commandes,[[GOLD]] - [[GREEN]]Faites [[RED]]/[Talent][[GREEN]] pour afficher une description d\u00e9taill\u00e9es de ce talent,[[DARK_AQUA]]D\u00e9veloppeurs :,[[GOLD]] - [[GREEN]]nossr50 [[BLUE]](Project Lead),[[GOLD]] - [[GREEN]]GJ [[BLUE]](Senior Developer),[[GOLD]] - [[GREEN]]NuclearW [[BLUE]](Developer),[[GOLD]] - [[GREEN]]bm01 [[BLUE]](Developer),[[DARK_AQUA]]Liens :,[[GOLD]] - [[GREEN]]issues.mcmmo.org[[GOLD]] Bug tracker,[[GOLD]] - [[GREEN]]#mcmmo @ irc.esper.net[[GOLD]] Canal IRC,[[GOLD]] - [[GREEN]]http://bit.ly/H6XwFb[[GOLD]] Thread sur Bukkit.org
+Commands.addlevels.AwardAll.1=[[GREEN]]You were awarded {0} levels in all skills!
+Commands.addlevels.AwardAll.2=[[RED]]All skills have been modified for {0}.
+Commands.addlevels.AwardSkill.1=[[GREEN]]You were awarded {0} levels in {1}!
+Commands.addlevels.AwardSkill.2=[[RED]]{0} has been modified for {1}.
+Commands.addxp.AwardAll=[[GREEN]]You were awarded {0} experience in all skills!
+Commands.addxp.AwardSkill=[[GREEN]]You were awarded {0} experience in {1}!
 Commands.Ability.Off=Utilisation des comp\u00e9tences [[RED]]Off
 Commands.Ability.On=Utilisation des comp\u00e9tences [[GREEN]]On
 Commands.AdminChat.Off=Canal admin [[RED]]Off
 Commands.AdminChat.On=Canal admin [[GREEN]]On
-Commands.AdminChat.Prefix=[[AQUA]]{[[WHITE]]{0}[[AQUA]]}
+Commands.AdminChat.Prefix=[[AQUA]]\\{[[WHITE]]{0}[[AQUA]]\\}
 Commands.AdminToggle=[[RED]]- Active / d\u00e9sactive le canal admin
+Commands.Chat.Console=*Console*
 Commands.Disabled=[[RED]]Cette commande est d\u00e9sactiv\u00e9e.
 Commands.DoesNotExist=[[RED]]Ce joueur est absent de la base de donn\u00e9es !
 Commands.GodMode.Disabled=[[YELLOW]]mcMMO Godmode d\u00e9sactiv\u00e9
@@ -349,11 +358,23 @@ Commands.Inspect=<joueur> [[RED]]- Affiche les informations du joueur
 Commands.Invite.Accepted=[[GREEN]]Invitation accept\u00e9e. Vous avez rejoint le groupe {0}
 Commands.Invite.Success=[[GREEN]]Invitation envoy\u00e9e.
 Commands.Leaderboards=<talent> <page> [[RED]]- Classement
+Commands.mcc.Header=[[RED]]---[][[YELLOW]]mcMMO Commands[[RED]][]---
 Commands.mcgod=[[RED]]- Active / d\u00e9sactive le Godmode
-Commands.mcrank.Skill=[[YELLOW]]{0}[[GREEN]] - [[GOLD]]Rank [[WHITE]]#[[GREEN]]{1}
+Commands.mchud.Invalid=[[RED]]That is not a valid HUD type.
+Commands.mcpurge.Success=[[GREEN]]The database was successfully purged!
+Commands.mcrank.Heading=[[GOLD]]-=PERSONAL RANKINGS=-
 Commands.mcrank.Overall=[[YELLOW]]Overall[[GREEN]] - [[GOLD]]Rank [[WHITE]]#[[GREEN]]{0}
+Commands.mcrank.Player=[[RED]]TARGET: [[WHITE]]{0}
+Commands.mcrank.Skill=[[YELLOW]]{0}[[GREEN]] - [[GOLD]]Rank [[WHITE]]#[[GREEN]]{1}
 Commands.mcrank.Unranked=[[WHITE]]Unranked
+Commands.mcrefresh.Success=[[RED]]{0}\'s cooldowns have been refreshed.
+Commands.mcremove.Success=[[GREEN]]{0} was successfully removed from the database!
+Commands.mctop.Tip=[[GOLD]]Tip: Use [[RED]]/mcrank[[GOLD]] to view all of your personal rankings!
 Commands.mmoedit=[joueur] <talent> <valeur> [[RED]] - Modifie le niveau la cible
+Commands.mmoedit.Modified.1=[[GREEN]]Your level in {0} was set to {1}!
+Commands.mmoedit.Modified.2=[[RED]]{0} has been modified for {1}.
+Commands.mmoupdate.Start=[[GRAY]]Starting conversion...
+Commands.mmoupdate.Finish=[[GREEN]]Conversion finished!
 Commands.ModDescription=[[RED]]- Affiche une description du mod
 Commands.NoConsole=Cette commande ne peut \u00eatre utilis\u00e9e via la console.
 Commands.Other=[[GREEN]]--AUTRES COMMANDES--
@@ -386,6 +407,16 @@ Commands.SkillInfo=/<talent> [[RED]]- Affiche des informations d\u00e9taill\u00e
 Commands.Stats.Self=VOS STATISTIQUES
 Commands.Stats=[[RED]]- Affiche vos statistiques mcMMO
 Commands.ToggleAbility=[[RED]]- Active / d\u00e9sactive l\'utilisation des comp\u00e9tences
+Commands.Usage.1=[[RED]]Proper usage is /{0} {1}
+Commands.Usage.2=[[RED]]Proper usage is /{0} {1} {2}
+Commands.Usage.3=[[RED]]Proper usage is /{0} {1} {2} {3}
+Commands.Usage.Level=level
+Commands.Usage.Message=message
+Commands.Usage.Page=page
+Commands.Usage.PartyName=party-name
+Commands.Usage.Player=player
+Commands.Usage.Skill=skill
+Commands.Usage.XP=xp
 mcMMO.NoInvites=[[RED]]Vous n\'avez pas \u00e9t\u00e9 invit\u00e9
 mcMMO.NoPermission=[[DARK_RED]]Vous n\'avez pas les droits.
 mcMMO.NoSkillNote=[[DARK_GRAY]]Si vous n\'avez pas les droits pour un talent, il n\'appara\u00eetra pas ici.
@@ -406,12 +437,17 @@ Party.IsLocked=[[RED]]Ce groupe est d\u00e9j\u00e0 verrouill\u00e9 !
 Party.IsntLocked=[[RED]]Ce groupe n\'est pas verrouill\u00e9 !
 Party.Locked=[[RED]]Le groupe est verrouill\u00e9, seul le chef de groupe peut inviter.
 Party.NotInYourParty=[[DARK_RED]]{0} is not in your party
-Party.NotOwner=[[DARK_RED]]You are not the party owner
+Party.NotOwner=[[DARK_RED]]You are not the party leader.
+Party.Owner.New=[[GREEN]]{0} is the new party leader.
+Party.Owner.NotLeader=[[DARK_RED]]You are no longer the party leader.
+Party.Owner.Player=[[GREEN]]You are now the party leader.
+Party.Password.Incorrect=[[RED]]Party password is incorrect.
 Party.PasswordSet=[[GREEN]]Mot de passe d\u00e9fini : {0}
 Party.Player.Invalid=[[RED]]Ce joueur n\'existe pas.
 Party.Teleport.Dead=[[RED]]Vous ne pouvez pas vous t\u00e9l\u00e9porter sur un joueur mort.
 Party.Teleport.Hurt=[[RED]]Vous avez \u00e9t\u00e9 bless\u00e9 durant les {0} derni\u00e8res secondes et ne pouvez pas vous t\u00e9l\u00e9porter.
 Party.Teleport.Player=[[GREEN]]Vous vous \u00eates t\u00e9l\u00e9port\u00e9 sur {0}.
+Party.Teleport.Self=[[RED]]You can\'t teleport to yourself!
 Party.Teleport.Target=[[GREEN]]{0} s\'est t\u00e9l\u00e9port\u00e9 sur vous.
 Party.Unlocked=[[GRAY]]Le groupe est d\u00e9verrouill\u00e9.
 Commands.XPGain.Acrobatics=Chuter
@@ -429,6 +465,7 @@ Commands.XPGain.Woodcutting=Chopping down trees
 Commands.XPGain=[[DARK_GRAY]]GAIN D\'XP : [[WHITE]]{0}
 Commands.xplock.locked=[[GOLD]]Votre barre d\'XP est maintenant verrouill\u00e9e sur {0} !
 Commands.xplock.unlocked=[[GOLD]]Votre barre d\'XP est maintenant [[GREEN]]D\u00c9VERROUILL\u00c9E[[GOLD]] !!
+Commands.xprate.modified=[[RED]]The XP RATE was modified to {0}
 Commands.xprate.over=[[RED]]L\u2019\u00e9v\u00e9nement de bonus d\'XP mcMMO est TERMIN\u00c9 !!
 Commands.xprate.proper.0=[[RED]]L\'usage correct pour changer le taux d\'XP est /xprate <valeur> <true/false>
 Commands.xprate.proper.1=[[RED]]L\'usage correct pour restaurer le taux d\'XP est /xprate reset
@@ -475,8 +512,8 @@ Stats.Own.Stats=[[GREEN]][mcMMO] Statistiques
 Perks.xp.name=Experience
 Perks.xp.desc=Receive {0}x XP.
 Perks.lucky.name=Luck
-Perks.lucky.desc=Gives {0} skills and abilities a 33.3 better chance to activate.
-Perks.lucky.desc.login=Gives certain skills and abilities a 33.3 better chance to activate.
+Perks.lucky.desc=Gives {0} skills and abilities a 33.3% better chance to activate.
+Perks.lucky.desc.login=Gives certain skills and abilities a 33.3% better chance to activate.
 Perks.lucky.bonus=[[GOLD]] ({0} with Lucky Perk)
 Perks.cooldowns.name=Fast Recovery
 Perks.cooldowns.desc=Cuts cooldown duration by {0}.
@@ -488,6 +525,7 @@ Vampirism.Killer.Failure=[[GOLD]][mcMMO] [[YELLOW]]{0}[[GRAY]] was too unskilled
 Vampirism.Killer.Success=[[GOLD]][mcMMO] [[DARK_AQUA]]You\'ve stolen [[BLUE]]{0}[[DARK_AQUA]] levels from [[YELLOW]]{1}.
 Vampirism.Victim.Failure=[[GOLD]][mcMMO] [[YELLOW]]{0}[[GRAY]] was unable to steal knowledge from you!
 Vampirism.Victim.Success=[[GOLD]][mcMMO] [[YELLOW]]{0}[[DARK_RED]] has stolen [[BLUE]]{1}[[DARK_RED]] levels from you!
+Spout.Donate=[[YELLOW]][mcMMO] Donate!
 Spout.LevelUp.1=[[GREEN]Level Up!
 Spout.LevelUp.2=[[YELLOW]]{0}[[DARK_AQUA]] ([[GREEN]]{1}[[DARK_AQUA]])
 Spout.Menu.Exit=[[GRAY]]Press ESCAPE to exit!
@@ -496,6 +534,7 @@ Spout.Menu.HudButton.1=HUD Type: {0}
 Spout.Menu.HudButton.2=Change your HUD style!
 Spout.Menu.Title=[[GOLD]]~mcMMO Menu~
 Spout.Title={0}\n[[YELLOW]]P[[GOLD]]lvl[[WHITE]].[[GREEN]]{1}
+MOTD.Donate=[[DARK_AQUA]]Donation Info:
 MOTD.Hardcore.VampireOff=[[GOLD]][mcMMO] [[DARK_RED]]Hardcore & Vampirism enabled.
 MOTD.Hardcore.Stats=[[GOLD]][mcMMO] [[DARK_AQUA]]Skill Death Penalty: [[DARK_RED]]{0}%
 MOTD.Hardcore.VampireOn=[[GOLD]][mcMMO] [[DARK_RED]]Hardcore enabled.
