--- a/src/main/resources/locale/locale_zh_CN.properties
+++ b/src/main/resources/locale/locale_zh_CN.properties
@@ -74,7 +74,7 @@ Excavation.Skills.GigaDrillBreaker.Other.Off=[[RED]]\u66b4\u8d70\u94bb\u5934[[GR
 Excavation.Skills.GigaDrillBreaker.Other.On=[[GREEN]]{0}[[DARK_GREEN]] \u4f7f\u7528\u4e86 [[RED]]\u66b4\u8d70\u94bb\u5934!
 Excavation.Skillup=[[YELLOW]]\u6316\u6398\u6280\u80fd\u63d0\u5347 {0}. \u603b\u5171 ({1})
 Fishing.Ability.Info=[[RED]]\u9b54\u6cd5\u730e\u4eba: [[GRAY]] ** \u968f\u7740\u5b9d\u85cf\u730e\u4eba\u7b49\u7ea7\u63d0\u9ad8  **
-Fishing.Ability.Locked.0=LOCKED UNTIL {0}+ SKILL (SHAKE)
+Fishing.Ability.Locked.0=\u9501\u5b9a\u72b6\u6001\uff0c\u76f4\u5230 {0}+ \u6280\u80fd\uff08\u6447\uff09
 Fishing.Ability.Rank=[[RED]]\u5b9d\u7269\u730e\u4eba\u7b49\u7ea7: [[YELLOW]]{0}/5
 Fishing.Ability.Shake=[[RED]]Shake Chance: [[YELLOW]]{0}
 Fishing.Ability.FD=[[RED]]Fisherman\'\'s Diet: [[YELLOW]]Rank {0}
@@ -96,6 +96,7 @@ Fishing.Skillup=[[YELLOW]]\u9493\u9c7c\u6280\u80fd\u63d0\u5347\u4e86 {0}. \u603b
 Herbalism.Ability.DoubleDropChance=[[RED]]\u53cc\u500d\u6389\u843d\u51e0\u7387: [[YELLOW]]{0}
 Herbalism.Ability.FD=[[RED]]\u519c\u592b\u98df\u8c31: [[YELLOW]]\u7b49\u7ea7 {0}
 Herbalism.Ability.GTe.Length=[[RED]]\u571f\u795e\u5e87\u4f51\u6301\u7eed\u65f6\u95f4: [[YELLOW]]{0}s
+Herbalism.Ability.GTe.NeedMore=[[RED]]You need more seeds to spread Green Terra.
 Herbalism.Ability.GTh.Chance=[[RED]]\u7eff\u5316\u51e0\u7387: [[YELLOW]]{0}
 Herbalism.Ability.GTh.Fail=[[RED]]**\u7eff\u5316\u5931\u8d25**
 Herbalism.Ability.GTh.Stage=[[RED]]Green Thumb Stage: [[YELLOW]] Crops grow in stage {0}
@@ -177,13 +178,14 @@ Repair.Effect.6=\u94bb\u77f3\u4fee\u7406 ({0}+ SKILL)
 Repair.Effect.7=\u4fee\u7406\u94bb\u77f3\u5de5\u5177\u548c\u88c5\u5907
 Repair.Effect.8=\u79d8\u6cd5\u953b\u9020
 Repair.Effect.9=\u4fee\u7406\u9644\u9b54\u7269\u54c1
-Repair.Effect.16=Salvage ({0}+ SKILL)
-Repair.Effect.17=Salvage Tools & Armor
+Repair.Effect.16=\u6253\u635e ({0}+ SKILL)
+Repair.Effect.17=\u6253\u635e\u5de5\u5177\u548c\u62a4\u7532
+Repair.Error=[[DARK_RED]]mcMMO encountered an error attempting to repair this item!
 Repair.Listener.Anvil=[[DARK_RED]]\u4f60\u5df2\u7ecf\u653e\u7f6e\u4e86\u4e00\u5757\u8d34\u65b9\u5757, \u4f60\u53ef\u4ee5\u5728\u8d34\u65b9\u5757\u4e0a\u4fee\u7406\u5de5\u5177\u548c\u62a4\u7532.
-Repair.Listener.Anvil2=[[DARK_RED]]You have placed a Salvage anvil, use this to Salvage tools and armor.
+Repair.Listener.Anvil2=[[DARK_RED]]\u60a8\u653e\u7f6e\u4e86\u4e00\u4e2a\u6253\u635e\u7827\uff0c\u7528\u6b64\u6765\u6253\u635e\u5de5\u5177\u548c\u88c5\u7532\u3002
 Repair.Listener=\u4fee\u7406\uff1a
 Repair.SkillName=\u4fee\u7406
-Repair.Skills.AdeptSalvage=[[DARK_RED]]You\'re not skilled enough to Salvage items.
+Repair.Skills.AdeptSalvage=[[DARK_RED]]\u4f60\u662f\u4e0d\u662f\u4e0d\u591f\u719f\u7ec3\u6551\u52a9\u9879\u76ee.
 Repair.Skills.AdeptDiamond=Repair.Skills.AdeptGold=[[DARK_RED]]\u4f60\u7684\u6280\u80fd\u7b49\u7ea7\u4e0d\u8db3\u4ee5\u4fee\u7406\u94bb\u77f3\u88c5\u5907.
 Repair.Skills.AdeptGold=Repair.Skills.AdeptGold=[[DARK_RED]]\u4f60\u7684\u6280\u80fd\u7b49\u7ea7\u4e0d\u8db3\u4ee5\u4fee\u7406\u9ec4\u91d1\u88c5\u5907.
 Repair.Skills.AdeptIron=[[DARK_RED]]\u4f60\u7684\u6280\u80fd\u4e0d\u8db3\u4ee5\u4fee\u590d\u94c1\u8d28\u88c5\u5907.
@@ -192,13 +194,13 @@ Repair.Skills.Adept=[[RED]]\u4f60\u5fc5\u987b\u8fbe\u5230\u7b49\u7ea7 [[YELLOW]]
 Repair.Skills.FeltEasy=[[GRAY]]\u90a3\u770b\u8d77\u6765\u5f88\u7b80\u5355.
 Repair.Skills.FullDurability=[[GRAY]]\u4f60\u7684\u88c5\u5907\u5df2\u7ecf\u6ee1\u8010\u4e45\u5ea6\u4e86
 Repair.Skills.SalvageSuccess=[[GRAY]]Item salvaged!
-Repair.Skills.NotFullDurability=[[DARK_RED]]You can\'t salvage damaged items.
+Repair.Skills.NotFullDurability=[[DARK_RED]]\u60a8\u4e0d\u80fd\u633d\u6551\u53d7\u635f\u7684\u9879\u76ee\u3002
 Repair.Skills.Mastery=[[RED]]\u4fee\u7406\u7cbe\u901a: [[YELLOW]]\u989d\u5916\u56de\u590d {0}% \u8010\u4e45\u5ea6
 Repair.Skills.StackedItems=[[DARK_RED]]\u4f60\u65e0\u6cd5\u4fee\u7406\u5df2\u53e0\u52a0\u7684\u7269\u54c1.
 Repair.Skills.Super.Chance=[[RED]]\u8d85\u7ea7\u4fee\u7406\u51e0\u7387: [[YELLOW]]{0}
 Repair.Skillup=[[YELLOW]]\u4fee\u7406\u6280\u80fd\u4e0a\u5347\u4e86 {0}. \u603b\u5171 ({1})
-Repair.Arcane.Chance.Downgrade=[[GRAY]]AF Downgrade Chance: [[YELLOW]]{0}%
-Repair.Arcane.Chance.Success=[[GRAY]]AF Success Rate: [[YELLOW]]{0}%
+Repair.Arcane.Chance.Downgrade=[[GRAY]]AF\u964d\u7ea7\u53ef\u80fd: [[YELLOW]]{0}%
+Repair.Arcane.Chance.Success=[[GRAY]]\u81ea\u52a8\u5bf9\u7126\u7684\u6210\u529f\u7387: [[YELLOW]]{0}%
 Repair.Arcane.Downgrade=[[RED]]\u8fd9\u4ef6\u7269\u54c1\u7684\u9644\u9b54\u7b49\u7ea7\u5df2\u4e0b\u964d.
 Repair.Arcane.Fail=[[RED]]\u8fd9\u4ef6\u7269\u54c1\u7684\u9644\u9b54\u5df2\u6d88\u5931.
 Repair.Arcane.Lost=[[RED]]\u4f60\u7684\u6280\u80fd\u7b49\u7ea7\u4e0d\u8db3\u4ee5\u4fdd\u7559\u9644\u9b54\u5c5e\u6027.
@@ -231,7 +233,7 @@ Swords.Skills.SS.On=[[GREEN]]**\u952f\u9f7f\u653b\u51fb\u542f\u52a8**
 Swords.Skills.SS.Refresh=[[GREEN]]\u4f60\u7684 [[YELLOW]]\u952f\u9f7f\u653b\u51fb [[GREEN]]\u6280\u80fd\u5df2\u7ecf\u53ef\u4ee5\u4f7f\u7528\u4e86!
 Swords.Skills.SS.Other.Off=[[RED]]\u952f\u9f7f\u653b\u51fb[[GREEN]] \u5df2\u7ecf\u7ed3\u675f\u4e86 [[YELLOW]]{0}
 Swords.Skills.SS.Other.On=[[GREEN]]{0}[[DARK_GREEN]] \u4f7f\u7528\u4e86 [[RED]]\u952f\u9f7f\u653b\u51fb!
-Swords.Skillup=[[YELLOW]]Swords skill increased by {0}. Total ({1})
+Swords.Skillup=[[YELLOW]]\u5355\u624b\u5251\u6280\u80fd\u63d0\u9ad8 {0}. \u603b ({1})
 Swords.SS.Length=[[RED]]\u952f\u9f7f\u5229\u5203\u6301\u7eed\u65f6\u95f4: [[YELLOW]]{0}s
 Taming.Ability.Bonus.0=\u7075\u7334\u654f\u6377
 Taming.Ability.Bonus.1=\u72fc\u4f1a\u907f\u514d\u5371\u9669
@@ -242,7 +244,7 @@ Taming.Ability.Bonus.5=\u53ea\u4f1a\u53d7\u52301/6\u7684\u7206\u70b8\u4f24\u5bb3
 Taming.Ability.Bonus.6=\u5229\u722a
 Taming.Ability.Bonus.7=+2 \u4f24\u5bb3
 Taming.Ability.Bonus.8=\u5feb\u9910\u670d\u52a1
-Taming.Ability.Bonus.9={0} Chance for heal on attack
+Taming.Ability.Bonus.9={0}% Chance for heal on attack
 Taming.Ability.Locked.0=LOCKED UNTIL {0}+ SKILL (ENVIRONMENTALLY AWARE)
 Taming.Ability.Locked.1=LOCKED UNTIL {0}+ SKILL (THICK FUR)
 Taming.Ability.Locked.2=LOCKED UNTIL {0}+ SKILL (SHOCK PROOF)
@@ -303,7 +305,7 @@ Woodcutting.Ability.0=\u79cb\u98ce\u626b\u843d\u53f6
 Woodcutting.Ability.1=\u626b\u9664\u6811\u53f6
 Woodcutting.Ability.Chance.DDrop=[[RED]]\u53cc\u500d\u6389\u843d\u51e0\u7387: [[YELLOW]]{0}
 Woodcutting.Ability.Length=[[RED]]\u6811\u6728\u780d\u4f10\u8005\u6301\u7eed\u65f6\u95f4: [[YELLOW]]{0}\u79d2
-Woodcutting.Ability.Locked.0=LOCKED UNTIL {0}+ SKILL (LEAF BLOWER)
+Woodcutting.Ability.Locked.0=\u9501\u5b9a\u72b6\u6001\uff0c\u76f4\u5230 {0}+ \u6280\u80fd (\u5439\u53f6\u673a)
 Woodcutting.Effect.0=\u7cbe\u9510\u4f10\u6728\u5de5(\u6280\u80fd)
 Woodcutting.Effect.1=\u7206\u53d1\u5f0f\u7684\u780d\u6811
 Woodcutting.Effect.2=\u4e71\u780d\u65e0\u53cc
@@ -334,12 +336,19 @@ Combat.StruckByGore=[[RED]]**\u4f60\u5f00\u59cb\u6d41\u8840\u4e86**
 Combat.TargetDazed=\u76ee\u6807\u88ab [[DARK_RED]]\u88ab\u51fb\u6655
 Combat.TouchedFuzzy=[[DARK_RED]]\u5934\u6655\u76ee\u7729
 mcMMO.Description=[[DARK_AQUA]]\u5173\u4e8e [[YELLOW]]mcMMO[[DARK_AQUA]] \u9879\u76ee:,[[GOLD]]mcMMO \u662f\u4e00\u4e2a [[RED]]\u5f00\u6e90\u7684[[GOLD]] RPG\u63d2\u4ef6,[[GOLD]]\u5236\u4f5c\u8005\u662f[[BLUE]]nossr50[[GOLD]]. \u5b83\u7684\u76ee\u6807\u662f\u63d0\u4f9bRPG\u7684\u611f\u53d7.,[[DARK_AQUA]]\u5c0f\u63d0\u793a:,[[GOLD]] - [[GREEN]]\u4f7f\u7528 [[RED]]/mcc[[GREEN]] \u6765\u67e5\u770b\u6307\u4ee4,[[GOLD]] - [[GREEN]]\u8f93\u5165 [[RED]]/SKILLNAME[[GREEN]] \u6765\u67e5\u770b\u6307\u4ee4\u7684\u8be6\u7ec6\u4fe1\u606f,[[DARK_AQUA]]\u5f00\u53d1\u8005:,[[GOLD]] - [[GREEN]]nossr50 [[BLUE]](\u9879\u76ee\u603b\u7ba1),[[GOLD]] - [[GREEN]]GJ [[BLUE]](\u9996\u5e2d\u5f00\u53d1\u8005),[[GOLD]] - [[GREEN]]NuclearW [[BLUE]](\u5f00\u53d1\u8005),[[GOLD]] - [[GREEN]]bm01 [[BLUE]](\u5f00\u53d1\u8005),[[DARK_AQUA]]\u6709\u7528\u7684\u94fe\u63a5:,[[GOLD]] - [[GREEN]]issues.mcmmo.org[[GOLD]] BUG\u62a5\u544a,[[GOLD]] - [[GREEN]]#mcmmo @ irc.esper.net[[GOLD]] IRC \u8054\u7cfb,[[GOLD]] - [[GREEN]]http://bit.ly/H6XwFb[[GOLD]] Bukkit \u5730\u5740
+Commands.addlevels.AwardAll.1=[[GREEN]]You were awarded {0} levels in all skills!
+Commands.addlevels.AwardAll.2=[[RED]]All skills have been modified for {0}.
+Commands.addlevels.AwardSkill.1=[[GREEN]]You were awarded {0} levels in {1}!
+Commands.addlevels.AwardSkill.2=[[RED]]{0} has been modified for {1}.
+Commands.addxp.AwardAll=[[GREEN]]You were awarded {0} experience in all skills!
+Commands.addxp.AwardSkill=[[GREEN]]You were awarded {0} experience in {1}!
 Commands.Ability.Off=\u6280\u80fd\u4f7f\u7528 [[GREEN]]\u5173\u95ed
 Commands.Ability.On=\u6280\u80fd\u4f7f\u7528 [[GREEN]]\u5f00\u542f
 Commands.AdminChat.Off=\u4ec5\u7ba1\u7406\u804a\u5929\u6a21\u5f0f [[RED]]\u5173\u95ed
 Commands.AdminChat.On=\u4ec5\u7ba1\u7406\u804a\u5929\u6a21\u5f0f [[GREEN]]\u5f00\u542f
-Commands.AdminChat.Prefix=[[AQUA]]{[[WHITE]]{0}[[AQUA]]}
+Commands.AdminChat.Prefix=[[AQUA]]\\{[[WHITE]]{0}[[AQUA]]\\}
 Commands.AdminToggle=[[RED]]- \u5207\u6362\u7ba1\u7406\u5458\u804a\u5929
+Commands.Chat.Console=*Console*
 Commands.Disabled=[[RED]]\u8fd9\u4e2a\u6307\u4ee4\u88ab\u7981\u7528\u4e86.
 Commands.DoesNotExist=[[RED]]\u8be5\u540d\u73a9\u5bb6\u4e0d\u5b58\u5728\u4e8e\u6570\u636e\u5e93\u4e2d\uff01
 Commands.GodMode.Disabled=[[YELLOW]]mcMMO \u4e0a\u5e1d\u6a21\u5f0f\u5173\u95ed
@@ -349,11 +358,23 @@ Commands.Inspect=<player> [[RED]]-\u67e5\u770b\u73a9\u5bb6\u8be6\u7ec6\u4fe1\u60
 Commands.Invite.Accepted=[[GREEN]]\u63a5\u53d7\u9080\u8bf7\uff0c\u4f60\u6210\u4e3a\u4e86\u961f\u4f0d\u4e2d\u7684\u4e00\u5458 {0}
 Commands.Invite.Success=[[GREEN]]\u9080\u8bf7\u53d1\u9001\u6210\u529f.
 Commands.Leaderboards=<skill> <page> [[RED]]- \u6392\u884c\u699c
+Commands.mcc.Header=[[RED]]---[][[YELLOW]]mcMMO Commands[[RED]][]---
 Commands.mcgod=[[RED]]- \u5207\u6362\u4e0a\u5e1d\u6a21\u5f0f
-Commands.mcrank.Skill=[[YELLOW]]{0}[[GREEN]] - [[GOLD]]Rank [[WHITE]]#[[GREEN]]{1}
+Commands.mchud.Invalid=[[RED]]That is not a valid HUD type.
+Commands.mcpurge.Success=[[GREEN]]The database was successfully purged!
+Commands.mcrank.Heading=[[GOLD]]-=PERSONAL RANKINGS=-
 Commands.mcrank.Overall=[[YELLOW]]Overall[[GREEN]] - [[GOLD]]Rank [[WHITE]]#[[GREEN]]{0}
+Commands.mcrank.Player=[[RED]]TARGET: [[WHITE]]{0}
+Commands.mcrank.Skill=[[YELLOW]]{0}[[GREEN]] - [[GOLD]]Rank [[WHITE]]#[[GREEN]]{1}
 Commands.mcrank.Unranked=[[WHITE]]Unranked
+Commands.mcrefresh.Success=[[RED]]{0}\'s cooldowns have been refreshed.
+Commands.mcremove.Success=[[GREEN]]{0} was successfully removed from the database!
+Commands.mctop.Tip=[[GOLD]]Tip: Use [[RED]]/mcrank[[GOLD]] to view all of your personal rankings!
 Commands.mmoedit=[player] <skill> <newvalue> [[RED]] - \u7f16\u8f91\u76ee\u6807
+Commands.mmoedit.Modified.1=[[GREEN]]Your level in {0} was set to {1}!
+Commands.mmoedit.Modified.2=[[RED]]{0} has been modified for {1}.
+Commands.mmoupdate.Start=[[GRAY]]Starting conversion...
+Commands.mmoupdate.Finish=[[GREEN]]Conversion finished!
 Commands.ModDescription=[[RED]]- \u8bf7\u9605\u8bfb\u7b80\u8981\u63d2\u4ef6\u63cf\u8ff0
 Commands.NoConsole=\u8fd9\u4e2a\u6307\u4ee4\u4e0d\u652f\u6301\u5728\u63a7\u5236\u53f0\u4f7f\u7528.
 Commands.Other=[[GREEN]]--\u5176\u4ed6\u547d\u4ee4--
@@ -377,8 +398,8 @@ Commands.Party=[\u961f\u4f0d\u540d] [[RED]]- \u521b\u5efa/\u52a0\u5165\u5df2\u5b
 Commands.PowerLevel.Leaderboard=[[YELLOW]]--mcMMO[[BLUE]] \u80fd\u529b\u7b49\u7ea7 [[YELLOW]]\u6392\u884c\u699c--
 Commands.PowerLevel.Capped=[[DARK_RED]]POWER LEVEL: [[GREEN]]{0} [[DARK_RED]]MAX LEVEL: [[YELLOW]]{1}
 Commands.PowerLevel=[[DARK_RED]]\u80fd\u529b\u7b49\u7ea7: [[GREEN]]{0}
-Commands.Reset.All=[[GREEN]]All of your skill levels have been reset successfully.
-Commands.Reset.Single=[[GREEN]]Your {0} skill level has been reset successfully.
+Commands.Reset.All=[[GREEN]]\u4f60\u7684\u6280\u672f\u6c34\u5e73\u5df2\u590d\u4f4d\u6210\u529f.
+Commands.Reset.Single=[[GREEN]]\u60a8\u7684 {0} \u6280\u672f\u6c34\u5e73\u5df2\u590d\u4f4d\u6210\u529f\u3002
 Commands.Reset=[[RED]]Reset a skill\'s level to 0
 Commands.Skill.Invalid=[[RED]]\u8fd9\u4e0d\u662f\u4e00\u4e2a\u6709\u6548\u7684\u6280\u80fd\u540d\u5b57!
 Commands.Skill.Leaderboard=[[YELLOW]]--mcMMO [[BLUE]]{0}[[YELLOW]] \u6392\u884c\u699c--
@@ -386,6 +407,16 @@ Commands.SkillInfo=/<skill> [[RED]]- \u67e5\u770b\u6280\u80fd\u7684\u8be6\u7ec6\
 Commands.Stats.Self=\u4f60\u7684\u4fe1\u606f
 Commands.Stats=[[RED]]- \u67e5\u770b\u4f60\u7684mcMMO\u7edf\u8ba1\u4fe1\u606f
 Commands.ToggleAbility=[[RED]]- \u7528\u9f20\u6807\u53f3\u952e\u5207\u6362\u6280\u80fd\u6fc0\u6d3b\u6a21\u5f0f
+Commands.Usage.1=[[RED]]Proper usage is /{0} {1}
+Commands.Usage.2=[[RED]]Proper usage is /{0} {1} {2}
+Commands.Usage.3=[[RED]]Proper usage is /{0} {1} {2} {3}
+Commands.Usage.Level=level
+Commands.Usage.Message=message
+Commands.Usage.Page=page
+Commands.Usage.PartyName=party-name
+Commands.Usage.Player=player
+Commands.Usage.Skill=skill
+Commands.Usage.XP=xp
 mcMMO.NoInvites=[[RED]]\u4f60\u73b0\u5728\u6ca1\u6709\u6536\u5230\u4efb\u4f55\u9080\u8bf7
 mcMMO.NoPermission=[[DARK_RED]]\u6743\u9650\u4e0d\u8db3.
 mcMMO.NoSkillNote=[[DARK_GRAY]]\u5982\u679c\u4f60\u6ca1\u6709\u67d0\u4e2a\u6280\u80fd\u7684\u4f7f\u7528\u6743\u9650\u90a3\u4e48\u4ed6\u5c06\u4e0d\u4f1a\u5728\u8fd9\u91cc\u663e\u793a.
@@ -406,12 +437,17 @@ Party.IsLocked=[[RED]]\u8fd9\u4e2a\u961f\u4f0d\u5df2\u7ecf\u9501\u5b9a!
 Party.IsntLocked=[[RED]]\u8fd9\u4e2a\u961f\u4f0d\u5e76\u6ca1\u6709\u9501\u5b9a!
 Party.Locked=[[RED]]\u961f\u4f0d\u88ab\u9501\u5b9a, \u53ea\u6709\u961f\u957f\u53ef\u4ee5\u9080\u8bf7.
 Party.NotInYourParty=[[DARK_RED]]{0} \u4f60\u4e0d\u5728\u4f60\u7684\u56e2\u961f
-Party.NotOwner=[[DARK_RED]]\u4f60\u4e0d\u662f\u961f\u4f0d\u6240\u6709\u8005
+Party.NotOwner=[[DARK_RED]]You are not the party leader.
+Party.Owner.New=[[GREEN]]{0} is the new party leader.
+Party.Owner.NotLeader=[[DARK_RED]]You are no longer the party leader.
+Party.Owner.Player=[[GREEN]]You are now the party leader.
+Party.Password.Incorrect=[[RED]]Party password is incorrect.
 Party.PasswordSet=[[GREEN]]\u961f\u4f0d\u5bc6\u7801\u8bbe\u7f6e\u4e3a {0}
 Party.Player.Invalid=[[RED]]\u8fd9\u4e0d\u662f\u4e00\u540d\u6709\u6548\u7684\u73a9\u5bb6
 Party.Teleport.Dead=[[RED]]\u4f60\u4e0d\u80fd\u4f20\u9001\u5230\u6b7b\u4ea1\u7684\u73a9\u5bb6\u8eab\u8fb9
 Party.Teleport.Hurt=[[RED]]\u4f60\u5df2\u7ecf\u5728 {0} \u79d2\u524d\u53d7\u4f24\u5e76\u4e14\u65e0\u6cd5\u4f20\u9001.
 Party.Teleport.Player=[[GREEN]]\u4f60\u5df2\u7ecf\u4f20\u9001\u5230 {0}.
+Party.Teleport.Self=[[RED]]You can\'t teleport to yourself!
 Party.Teleport.Target=[[GREEN]]{0} \u5df2\u7ecf\u4f20\u9001\u5230\u4f60\u8eab\u8fb9.
 Party.Unlocked=[[GRAY]]\u961f\u4f0d\u5df2\u89e3\u9501
 Commands.XPGain.Acrobatics=\u6389\u843d
@@ -429,6 +465,7 @@ Commands.XPGain.Woodcutting=Chopping down trees
 Commands.XPGain=[[DARK_GRAY]]\u83b7\u5f97\u7ecf\u9a8c: [[WHITE]]{0}
 Commands.xplock.locked=[[GOLD]]\u4f60\u7684\u7ecf\u9a8c\u6761\u9501\u5b9a\u5728 {0}!
 Commands.xplock.unlocked=[[GOLD]]\u4f60\u7684\u7ecf\u9a8c\u6761\u73b0\u5728 [[GREEN]]\u89e3\u9664\u9501\u5b9a\u4e86[[GOLD]]!
+Commands.xprate.modified=[[RED]]The XP RATE was modified to {0}
 Commands.xprate.over=[[RED]]mcMMO \u9ad8\u7ecf\u9a8c\u4e8b\u4ef6\u7ed3\u675f!!
 Commands.xprate.proper.0=[[RED]]\u60f3\u4fee\u6539\u7ecf\u9a8c\u83b7\u53d6\u7387\u8bf7\u8f93\u5165 /xprate <integer> <true/false>
 Commands.xprate.proper.1=[[RED]]\u60f3\u628a\u7ecf\u9a8c\u83b7\u53d6\u7387\u8c03\u6574\u4e3a\u9ed8\u8ba4\u8bf7\u8f93\u5165 /xprate reset
@@ -475,19 +512,20 @@ Stats.Own.Stats=[[GREEN]][mcMMO] \u7edf\u8ba1\u4fe1\u606f
 Perks.xp.name=Experience
 Perks.xp.desc=Receive {0}x XP.
 Perks.lucky.name=Luck
-Perks.lucky.desc=Gives {0} skills and abilities a 33.3 better chance to activate.
-Perks.lucky.desc.login=Gives certain skills and abilities a 33.3 better chance to activate.
+Perks.lucky.desc=Gives {0} skills and abilities a 33.3% better chance to activate.
+Perks.lucky.desc.login=Gives certain skills and abilities a 33.3% better chance to activate.
 Perks.lucky.bonus=[[GOLD]] ({0} with Lucky Perk)
-Perks.cooldowns.name=Fast Recovery
+Perks.cooldowns.name=\u5feb\u901f\u6062\u590d
 Perks.cooldowns.desc=Cuts cooldown duration by {0}.
 Perks.activationtime.name=Endurance
-Perks.activationtime.desc=Increases ability activation time by {0} seconds.
+Perks.activationtime.desc=\u63d0\u9ad8\u80fd\u529b\uff0c\u6fc0\u6d3b\u65f6\u95f4 {0} \u79d2.
 Perks.activationtime.bonus=[[GOLD]] ({0}s with Endurance Perk)
 Hardcore.Player.Loss=[[GOLD]][mcMMO] [[DARK_RED]]You\'ve lost [[BLUE]]{0}[[DARK_RED]] from death.
 Vampirism.Killer.Failure=[[GOLD]][mcMMO] [[YELLOW]]{0}[[GRAY]] was too unskilled to grant you any knowledge.
 Vampirism.Killer.Success=[[GOLD]][mcMMO] [[DARK_AQUA]]You\'ve stolen [[BLUE]]{0}[[DARK_AQUA]] levels from [[YELLOW]]{1}.
 Vampirism.Victim.Failure=[[GOLD]][mcMMO] [[YELLOW]]{0}[[GRAY]] was unable to steal knowledge from you!
 Vampirism.Victim.Success=[[GOLD]][mcMMO] [[YELLOW]]{0}[[DARK_RED]] has stolen [[BLUE]]{1}[[DARK_RED]] levels from you!
+Spout.Donate=[[YELLOW]][mcMMO] Donate!
 Spout.LevelUp.1=[[GREEN]Level Up!
 Spout.LevelUp.2=[[YELLOW]]{0}[[DARK_AQUA]] ([[GREEN]]{1}[[DARK_AQUA]])
 Spout.Menu.Exit=[[GRAY]]Press ESCAPE to exit!
@@ -496,6 +534,7 @@ Spout.Menu.HudButton.1=HUD Type: {0}
 Spout.Menu.HudButton.2=Change your HUD style!
 Spout.Menu.Title=[[GOLD]]~mcMMO Menu~
 Spout.Title={0}\n[[YELLOW]]P[[GOLD]]lvl[[WHITE]].[[GREEN]]{1}
+MOTD.Donate=[[DARK_AQUA]]Donation Info:
 MOTD.Hardcore.VampireOff=[[GOLD]][mcMMO] [[DARK_RED]]Hardcore & Vampirism enabled.
 MOTD.Hardcore.Stats=[[GOLD]][mcMMO] [[DARK_AQUA]]Skill Death Penalty: [[DARK_RED]]{0}%
 MOTD.Hardcore.VampireOn=[[GOLD]][mcMMO] [[DARK_RED]]Hardcore enabled.
